--- a/FER_colab_webcam.ipynb
+++ b/FER_colab_webcam.ipynb
@@ -1887,7 +1887,7 @@
       "source": [
         "# Hope You Enjoyed!\n",
         "\n",
-        "This code is based on the work done in [this notebook](https://www.kaggle.com/code/oykuer/emotion-detection-using-cnn/notebook) by [Oyku Eravci](https://www.kaggle.com/oykuer)\n",
+        "This code is based on the work done in [this notebook](https://www.kaggle.com/code/oykuer/emotion-detection-using-cnn/notebook) by [Oyku Eravci](https://www.kaggle.com/oykuer) and [this repo](https://github.com/atulapra/Emotion-detection/blob/master/src/emotions.py) by [atulapra](https://github.com/atulapra)\n",
         "\n",
         "Have a great day!"
       ]
